// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redirects correctly 1`] = `null`;

exports[`renders Component correctly 1`] = `
<div
  className="Component-root-8"
>
  <div
    className="Component-header-7"
  />
  <div
    className="Component-container-6"
  >
    <h2
      className="MuiTypography-root-9 MuiTypography-h2-22 MuiTypography-alignCenter-32"
    >
      PRIZEY
    </h2>
    <div
      className="Component-caption-4"
    />
    <div
      className="Component-children-5"
    >
      <div
        aria-labelledby="Are you sure?"
        classes={
          Object {
            "paper": "PlayAgain-paper-45",
          }
        }
        fullWidth={true}
        onClose={[Function]}
        open={false}
      >
        <div
          className="MuiDialogTitle-root-46"
        >
          <h2
            className="MuiTypography-root-9 MuiTypography-title-15"
          >
            Are you sure?
          </h2>
        </div>
        <div
          className="MuiDialogContent-root-47"
        >
          <p
            className="MuiTypography-root-9 MuiDialogContentText-root-48 MuiTypography-subheading-16 MuiTypography-colorTextSecondary-42"
          >
            This action can't be undone.
          </p>
        </div>
        <div
          className="MuiDialogActions-root-49"
        >
          <button
            aria-label="cancel"
            autoFocus={true}
            className="MuiButtonBase-root-77 MuiButton-root-51 MuiButton-text-53 MuiButton-textPrimary-54 MuiButton-flat-56 MuiButton-flatPrimary-57 MuiDialogActions-action-50"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-52"
            >
              Cancel
            </span>
            <span
              className="MuiTouchRipple-root-80"
            />
          </button>
          <button
            aria-label="confirm"
            className="MuiButtonBase-root-77 MuiButton-root-51 MuiButton-text-53 MuiButton-textPrimary-54 MuiButton-flat-56 MuiButton-flatPrimary-57 MuiDialogActions-action-50"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-52"
            >
              Confirm
            </span>
            <span
              className="MuiTouchRipple-root-80"
            />
          </button>
        </div>
      </div>
      <h5
        className="MuiTypography-root-9 MuiTypography-h5-25 MuiTypography-alignCenter-32 ConfirmOrderComponent-title-2"
      >
        Confirm Order
      </h5>
      <p
        className="MuiTypography-root-9 MuiTypography-body2-17 ConfirmOrderComponent-field-1"
      >
        Full Name
        :
         
        <span
          className="ConfirmOrderComponent-value-3"
        >
          john john
        </span>
      </p>
      <p
        className="MuiTypography-root-9 MuiTypography-body2-17 ConfirmOrderComponent-field-1"
      >
        Address
        :
         
        <span
          className="ConfirmOrderComponent-value-3"
        >
          1# street
        </span>
      </p>
      <p
        className="MuiTypography-root-9 MuiTypography-body2-17 ConfirmOrderComponent-field-1"
      >
        City
        :
         
        <span
          className="ConfirmOrderComponent-value-3"
        >
          porto alegre
        </span>
      </p>
      <p
        className="MuiTypography-root-9 MuiTypography-body2-17 ConfirmOrderComponent-field-1"
      >
        State / Province / Region
        :
         
        <span
          className="ConfirmOrderComponent-value-3"
        >
          RS
        </span>
      </p>
      <p
        className="MuiTypography-root-9 MuiTypography-body2-17 ConfirmOrderComponent-field-1"
      >
        Postal Code / ZIP
        :
         
        <span
          className="ConfirmOrderComponent-value-3"
        />
      </p>
      <p
        className="MuiTypography-root-9 MuiTypography-body2-17 ConfirmOrderComponent-field-1"
      >
        Clothing Size
        :
         
        <span
          className="ConfirmOrderComponent-value-3"
        >
          M
        </span>
      </p>
      <p
        className="MuiTypography-root-9 MuiTypography-body2-17 ConfirmOrderComponent-field-1"
      >
        Shoe Size
        :
         
        <span
          className="ConfirmOrderComponent-value-3"
        >
          42
        </span>
      </p>
      <div
        style={
          Object {
            "textAlign": "center",
          }
        }
      />
      <button
        className="MuiButtonBase-root-77 MuiButton-root-51 MuiButton-contained-62 MuiButton-containedPrimary-63 MuiButton-raised-65 MuiButton-raisedPrimary-66 MuiButton-fullWidth-76"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-52"
        >
          SHIP IT!
        </span>
        <span
          className="MuiTouchRipple-root-80"
        />
      </button>
      <button
        aria-label="Cancel"
        className="MuiButtonBase-root-77 MuiButton-root-51 MuiButton-outlined-59 MuiButton-outlinedPrimary-60 MuiButton-fullWidth-76"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-52"
        >
          CANCEL
        </span>
        <span
          className="MuiTouchRipple-root-80"
        />
      </button>
    </div>
    <p
      className="MuiTypography-root-9 MuiTypography-body1-18 MuiTypography-alignCenter-32"
    />
  </div>
</div>
`;

exports[`renders correctly 1`] = `
<div
  afterCreate={[Function]}
  name="orders"
  render={[Function]}
>
  New -
  <div>
    render -
    <div
      className="Component-root-8"
    >
      <div
        className="Component-header-7"
      />
      <div
        className="Component-container-6"
      >
        <h2
          className="MuiTypography-root-9 MuiTypography-h2-22 MuiTypography-alignCenter-32"
        >
          PRIZEY
        </h2>
        <div
          className="Component-caption-4"
        />
        <div
          className="Component-children-5"
        >
          <div
            aria-labelledby="Are you sure?"
            classes={
              Object {
                "paper": "PlayAgain-paper-45",
              }
            }
            fullWidth={true}
            onClose={[Function]}
            open={false}
          >
            <div
              className="MuiDialogTitle-root-46"
            >
              <h2
                className="MuiTypography-root-9 MuiTypography-title-15"
              >
                Are you sure?
              </h2>
            </div>
            <div
              className="MuiDialogContent-root-47"
            >
              <p
                className="MuiTypography-root-9 MuiDialogContentText-root-48 MuiTypography-subheading-16 MuiTypography-colorTextSecondary-42"
              >
                This action can't be undone.
              </p>
            </div>
            <div
              className="MuiDialogActions-root-49"
            >
              <button
                aria-label="cancel"
                autoFocus={true}
                className="MuiButtonBase-root-77 MuiButton-root-51 MuiButton-text-53 MuiButton-textPrimary-54 MuiButton-flat-56 MuiButton-flatPrimary-57 MuiDialogActions-action-50"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiButton-label-52"
                >
                  Cancel
                </span>
                <span
                  className="MuiTouchRipple-root-80"
                />
              </button>
              <button
                aria-label="confirm"
                className="MuiButtonBase-root-77 MuiButton-root-51 MuiButton-text-53 MuiButton-textPrimary-54 MuiButton-flat-56 MuiButton-flatPrimary-57 MuiDialogActions-action-50"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onContextMenu={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiButton-label-52"
                >
                  Confirm
                </span>
                <span
                  className="MuiTouchRipple-root-80"
                />
              </button>
            </div>
          </div>
          <h5
            className="MuiTypography-root-9 MuiTypography-h5-25 MuiTypography-alignCenter-32 ConfirmOrderComponent-title-2"
          >
            Confirm Order
          </h5>
          <p
            className="MuiTypography-root-9 MuiTypography-body2-17 ConfirmOrderComponent-field-1"
          >
            Full Name
            :
             
            <span
              className="ConfirmOrderComponent-value-3"
            >
              john john
            </span>
          </p>
          <p
            className="MuiTypography-root-9 MuiTypography-body2-17 ConfirmOrderComponent-field-1"
          >
            Address
            :
             
            <span
              className="ConfirmOrderComponent-value-3"
            >
              1# street
            </span>
          </p>
          <p
            className="MuiTypography-root-9 MuiTypography-body2-17 ConfirmOrderComponent-field-1"
          >
            City
            :
             
            <span
              className="ConfirmOrderComponent-value-3"
            >
              porto alegre
            </span>
          </p>
          <p
            className="MuiTypography-root-9 MuiTypography-body2-17 ConfirmOrderComponent-field-1"
          >
            State / Province / Region
            :
             
            <span
              className="ConfirmOrderComponent-value-3"
            >
              RS
            </span>
          </p>
          <p
            className="MuiTypography-root-9 MuiTypography-body2-17 ConfirmOrderComponent-field-1"
          >
            Postal Code / ZIP
            :
             
            <span
              className="ConfirmOrderComponent-value-3"
            />
          </p>
          <p
            className="MuiTypography-root-9 MuiTypography-body2-17 ConfirmOrderComponent-field-1"
          >
            Clothing Size
            :
             
            <span
              className="ConfirmOrderComponent-value-3"
            >
              M
            </span>
          </p>
          <p
            className="MuiTypography-root-9 MuiTypography-body2-17 ConfirmOrderComponent-field-1"
          >
            Shoe Size
            :
             
            <span
              className="ConfirmOrderComponent-value-3"
            >
              42
            </span>
          </p>
          <div
            style={
              Object {
                "textAlign": "center",
              }
            }
          />
          <button
            className="MuiButtonBase-root-77 MuiButton-root-51 MuiButton-contained-62 MuiButton-containedPrimary-63 MuiButton-raised-65 MuiButton-raisedPrimary-66 MuiButton-fullWidth-76"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-52"
            >
              SHIP IT!
            </span>
            <span
              className="MuiTouchRipple-root-80"
            />
          </button>
          <button
            aria-label="Cancel"
            className="MuiButtonBase-root-77 MuiButton-root-51 MuiButton-outlined-59 MuiButton-outlinedPrimary-60 MuiButton-fullWidth-76"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-52"
            >
              CANCEL
            </span>
            <span
              className="MuiTouchRipple-root-80"
            />
          </button>
        </div>
        <p
          className="MuiTypography-root-9 MuiTypography-body1-18 MuiTypography-alignCenter-32"
        />
      </div>
    </div>
  </div>
  <div>
    renderCreated - 
  </div>
</div>
`;
